yet new design. Damir

--- a/src/main/webapp/css/style-form.css
+++ b/src/main/webapp/css/style-form.css
@@ -4490,3 +4490,4 @@ html {
     background: url(http://www.intrawallpaper.com/static/images/Alien_Ink_2560X1600_Abstract_Background_AgLbDjN.jpg) center;
     background-size: 200%;
 }
+/*-----------*/
