--- a/src/main/webapp/css/style-form.css
+++ b/src/main/webapp/css/style-form.css
@@ -4097,13 +4097,14 @@ input {
 /*styling both submit buttons */
 #wrapper p.button input {
     width: 25%;
-    text-transform: lowercase;
     cursor: pointer;
     background: rgb(61, 157, 179);
     padding: 1px;
+    text-transform: uppercase;
+    font-weight: bold;
     font-family: 'BebasNeueRegular','Arial Narrow',Arial,sans-serif;
     color: #fff;
-    font-size: 19px;
+    font-size: 15px;
     border: 1px solid rgb(185, 192, 193);
     margin-bottom: 10px;
     text-shadow: 0 1px 1px rgba(0,0,0,0.2);
